<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/ic_photo"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:src="@drawable/ic_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="186dp"
        android:scaleType="fitXY"/>

    <EditText
        android:id="@+id/tv_input_name"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_photo"
        android:background="@drawable/rounded_text"
        android:paddingTop="4dp"
        android:paddingStart="14dp"
        android:maxLines="1"
        android:hint="@string/name"
        android:textSize="16sp"
        android:fontFamily="@font/poppins" />

    <EditText
        android:id="@+id/tv_input_palindrome"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_input_name"
        android:background="@drawable/rounded_text"
        android:hint="@string/palindrome"
        android:paddingStart="14dp"
        android:paddingTop="4dp"
        android:textSize="16sp"
        android:fontFamily="@font/poppins" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_check"
        android:layout_width="310dp"
        android:layout_height="44dp"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_input_palindrome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/check"
        android:backgroundTint="#2B637B"
        android:layout_marginTop="45dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="310dp"
        app:cornerRadius="12dp"
        android:layout_height="44dp"
        app:layout_constraintTop_toBottomOf="@id/btn_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/next"
        android:backgroundTint="#2B637B"
        android:layout_marginTop="8dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>